--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
-  "engines":{
+  "engines": {
     "node": "9.1.0"
   },
   "author": "Serhii Koval",
@@ -17,6 +17,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.33",
     "mongoose": "^4.13.4"
   },
