--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.13.4"
+    "mongoose": "^4.13.4",
+    "validator": "^9.1.1"
   },
   "devDependencies": {
     "expect": "^1.20.2",
