--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Serhii Koval",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "crypto-js": "^3.1.9-1",
